# git-fork-tool

./: .gitignore  README.md  pypi-publish.md  pypi_publish.ps1  pypi_publish.sh  pyproject.toml
src/git_fork_tool/: __init__.py  api.py  cli.py  git_cmd.py  platforms.py  pr.py  repo.py
tests/: test_platforms.py  test_pr.py
